Add levitation potion

--- a/src/main/resources/assets/pandoria/lang/en_us.json
+++ b/src/main/resources/assets/pandoria/lang/en_us.json
@@ -11,5 +11,9 @@
   "item.pandoria.pandonium_leggings" : "Pandonium Leggings",
   "item.pandoria.pandonium_boots" : "Pandonium Boots",
 
-  "block.pandoria.pandonium_block" : "Pandonium Block"
+  "block.pandoria.pandonium_block" : "Pandonium Block",
+
+  "item.minecraft.potion.effect.long_levitation" : "Potion of Levitation",
+  "item.minecraft.splash_potion.effect.long_levitation" : "Splash Potion of Levitation",
+  "item.minecraft.lingering_potion.effect.long_levitation" : "Lingering Potion of Levitation"
 }
